--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
-
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,153 +17,9 @@
   <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.5/css/unicons.css">
   <link rel="stylesheet" href="css/resources_v2.css">
-  <title>Kainat Yasmeen</title>
-<!--   <link rel="icon" href="/assets/cat.png" type="image/x-icon"> -->
+  <title>Sagnik Chatterjee</title>
+  <link rel="icon" href="/assets/cat.png" type="image/x-icon">
   <!-- <a href="https://www.flaticon.com/free-icons/strawberry" title="strawberry icons">Strawberry icons created by Freepik -
         Flaticon</a> -->
 </head>
-
-<body class="body flex">
-  <div>
-    <header class="primary-header flex">
-      <!-- <a class="logo" href="./index.html#">
-                <img src="/assets/svgs/estate.svg" />
-            </a> -->
-      <button class="mobile-nav-toggle" aria-controls="navul" aria-expanded="false">
-        <span class="sr-only">Menu</span>
-        <div id="menu" class="hamburgerMenu">
-          <div id="bar1" class="bar"></div>
-          <div id="bar2" class="bar"></div>
-          <div id="bar3" class="bar"></div>
-        </div>
-      </button>
-      <div class="herotext delay1">
-        <a href="#">Kainat</a>
-      </div>
-      <!-- <div class="mobile herotext delay1">
-                <a href="#">kainat</a>
-            </div> -->
-      <nav>
-        <ul role="list" class="primary-navigation flex" data-visible="false">
-
-          <!-- <li class="navitem delay1">
-                        <a href="#"><span aria-hidden="true" style="font-family:'Roboto',sans-serif;"><i
-                                    class="uil uil-corner-down-right"></i>/</span>top</a>
-                    </li> -->
-          <li class="navitem delay2">
-            <a href="#papers">
-              <span aria-hidden="true" style="font-family:'Roboto',sans-serif;">
-                <i class="uil uil-corner-down-right"></i>/</span>research
-            </a>
-          </li>
-
-          <li class="navitem delay3">
-            <a href="#talks"><span aria-hidden="true" style="font-family:'Roboto',sans-serif;"><i
-                  class="uil uil-corner-down-right"></i>/</span>talks</a>
-          </li>
-
-          <!-- <li class="navitem delay4">
-            <a href="#activities">
-              <span aria-hidden="true" style="font-family:'Roboto',sans-serif;">
-                <i class="uil uil-corner-down-right"></i>/</span>activities
-            </a>
-          </li> -->
-
-          <li class="navitem delay4">
-            <a href="/misc.html">
-              <span aria-hidden="true" style="font-family:'Roboto',sans-serif;">
-                <i class="uil uil-external-link-alt"></i>/</span>misc.
-            </a>
-          </li>
-
-          <li class="navitem delay5">
-            <a href="https://theoreticles.netlify.app/" target="_blank" rel="noopener noreferrer me"><span
-                aria-hidden="true" style="font-family:'Roboto',sans-serif;"><i
-                  class="uil uil-external-link-alt"></i>/</span>Blog</a>
-          </li>
-          <!-- <li class="navitem delay5">
-                        <a href="./assets/Proposal.pdf" target="_blank" rel="noopener noreferrer me"><span
-                                aria-hidden="true" style="font-family:'Roboto',sans-serif;"><i
-                                    class="uil uil-download-alt"></i></span>Research Statement</a>
-                    </li> -->
-          <li class="navitem delay5">
-            <a href="./assets/kainat_CV.pdf" target="_blank" rel="noopener noreferrer me"><span aria-hidden="true"
-                style="font-family:'Roboto',sans-serif;"><i class="uil uil-download-alt"></i></span>CV</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
-  </div>
-
-
-  <div>
-
-    <main class="mainbody">
-      <!-- <section class="full-page-slide"> -->
-
-      <section>
-
-        <div id="about-me" class="post delay6 about-me flex">
-          <h1 class="titleh1">kainat Chatterjee</h1>
-          <div class="about-grid grid">
-            <div class="card__content dp card__img">
-              <img loading="lazy" src="/assets/dp_new.jpeg">
-            </div>
-            <div class="card">
-
-              <div class="card__content">
-                <h2 class="card-title">About Me</h2>
-
-                <p class="card-description">
-                  I am a PhD student in the
-                  <span><a href="https://braqiiit.github.io/" target="_blank" rel="noopener noreferrer me">BraQIIIT
-                      lab</a></span> at
-                  IIIT-Delhi, where I am very fortunate to be advised by <span><a
-                      href="https://www.iiitd.edu.in/~shobha/" target="_blank" rel="noopener noreferrer me">Prof.
-                      Debajyoti Bera</a></span>. Previously, I
-                  was employed at Oracle Financial Software Services (OFSS) in Bengaluru.
-                </p><br>
-
-
-    </main>
-  </div>
-  <div class="footer">
-    <div class="socials card-description">
-      <!-- Use https://iconscout.com/ to find svg's, and then directly edit the code.-->
-      <a href="https://dblp.org/pid/279/3927.html" target="_blank" rel="noopener noreferrer me" title="DBLP"
-        style="color: currentColor;">
-        <svg style="color: rgb(59, 66, 82);" class="bi bi-dblp" role="img" viewBox="0 0 24 24"
-          xmlns="http://www.w3.org/2000/svg">
-          <title>dblp</title>
-          <path
-            d="M3.075.002c-.096.013-.154.092-.094.31L4.97 7.73 3.1 8.6s-.56.26-.4.85l2.45 9.159s.16.59.72.33l6.169-2.869 1.3-.61s.52-.24.42-.79l-.01-.06-1.13-4.22-.658-2.45-.672-2.49v-.04s-.16-.59-.84-1L3.5.141s-.265-.16-.425-.139zM18.324 5.03a.724.724 0 0 0-.193.06l-5.602 2.6.862 3.2 1.09 4.08.01.06c.05.47-.411.79-.411.79l-1.88.87.5 1.89.04.1c.07.17.28.6.81.91l6.95 4.269s.68.41.52-.17l-1.981-7.4 1.861-.86s.56-.26.4-.85L18.85 5.42s-.116-.452-.526-.39z"
-            fill="#5e81ac"></path>
-        </svg>
-      </a>
-      <a href="https://orcid.org/0000-0002-9289-7120" target="_blank" rel="noopener noreferrer me" title="orcid"
-        style="color: currentColor;">
-        <svg class="bi bi-orcid" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-          <path
-            d="M294.75 188.19h-45.92V342h47.47c67.62 0 83.12-51.34 83.12-76.91 0-41.64-26.54-76.9-84.67-76.9zM256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm-80.79 360.76h-29.84v-207.5h29.84zm-14.92-231.14a19.57 19.57 0 1 1 19.57-19.57 19.64 19.64 0 0 1-19.57 19.57zM300 369h-81V161.26h80.6c76.73 0 110.44 54.83 110.44 103.85C410 318.39 368.38 369 300 369z"
-            fill="#5e81ac"></path>
-        </svg>
-      </a>
-
-      <a href="https://www.linkedin.com/in/kainat-yasmeen-6714b41a0/" target="_blank" rel="noopener noreferrer me" title="Linkedin">
-        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="#3b4252" class="bi bi-linkedin"
-          viewBox="0 0 16 16">
-          <path
-            d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"
-            fill="#5e81ac" />
-        </svg>
-      </a>
-    </div>
-  </div>
-
-  <script src="js/resources.js" defer></script>
-  <script type="text/javascript" id="MathJax-script" async
-    src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
-    </script>
-</body>
-
 </html>
