--- a/index.html
+++ b/index.html
@@ -17,9 +17,82 @@
   <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.5/css/unicons.css">
   <link rel="stylesheet" href="css/resources_v2.css">
-  <title>Sagnik Chatterjee</title>
+  <title>Kainat Yasmeen</title>
   <link rel="icon" href="/assets/cat.png" type="image/x-icon">
   <!-- <a href="https://www.flaticon.com/free-icons/strawberry" title="strawberry icons">Strawberry icons created by Freepik -
         Flaticon</a> -->
 </head>
+<body class="body flex">
+  <div>
+    <header class="primary-header flex">
+      <!-- <a class="logo" href="./index.html#">
+                <img src="/assets/svgs/estate.svg" />
+            </a> -->
+      <button class="mobile-nav-toggle" aria-controls="navul" aria-expanded="false">
+        <span class="sr-only">Menu</span>
+        <div id="menu" class="hamburgerMenu">
+          <div id="bar1" class="bar"></div>
+          <div id="bar2" class="bar"></div>
+          <div id="bar3" class="bar"></div>
+        </div>
+      </button>
+      <div class="herotext delay1">
+        <a href="#">Sagnik</a>
+      </div>
+      <!-- <div class="mobile herotext delay1">
+                <a href="#">Sagnik</a>
+            </div> -->
+      <nav>
+        <ul role="list" class="primary-navigation flex" data-visible="false">
+
+          <!-- <li class="navitem delay1">
+                        <a href="#"><span aria-hidden="true" style="font-family:'Roboto',sans-serif;"><i
+                                    class="uil uil-corner-down-right"></i>/</span>top</a>
+                    </li> -->
+          <li class="navitem delay2">
+            <a href="#papers">
+              <span aria-hidden="true" style="font-family:'Roboto',sans-serif;">
+                <i class="uil uil-corner-down-right"></i>/</span>research
+            </a>
+          </li>
+
+          <li class="navitem delay3">
+            <a href="#talks"><span aria-hidden="true" style="font-family:'Roboto',sans-serif;"><i
+                  class="uil uil-corner-down-right"></i>/</span>talks</a>
+          </li>
+
+          <!-- <li class="navitem delay4">
+            <a href="#activities">
+              <span aria-hidden="true" style="font-family:'Roboto',sans-serif;">
+                <i class="uil uil-corner-down-right"></i>/</span>activities
+            </a>
+          </li> -->
+
+          <li class="navitem delay4">
+            <a href="/misc.html">
+              <span aria-hidden="true" style="font-family:'Roboto',sans-serif;">
+                <i class="uil uil-external-link-alt"></i>/</span>misc.
+            </a>
+          </li>
+
+          <li class="navitem delay5">
+            <a href="https://theoreticles.netlify.app/" target="_blank" rel="noopener noreferrer me"><span
+                aria-hidden="true" style="font-family:'Roboto',sans-serif;"><i
+                  class="uil uil-external-link-alt"></i>/</span>Blog</a>
+          </li>
+          <!-- <li class="navitem delay5">
+                        <a href="./assets/Proposal.pdf" target="_blank" rel="noopener noreferrer me"><span
+                                aria-hidden="true" style="font-family:'Roboto',sans-serif;"><i
+                                    class="uil uil-download-alt"></i></span>Research Statement</a>
+                    </li> -->
+          <li class="navitem delay5">
+            <a href="./assets/Sagnik_CV.pdf" target="_blank" rel="noopener noreferrer me"><span aria-hidden="true"
+                style="font-family:'Roboto',sans-serif;"><i class="uil uil-download-alt"></i></span>CV</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+  </div>
+</body>
+    
 </html>
