--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
         </div>
       </button>
       <div class="herotext delay1">
-        <a href="#">Sagnik</a>
+        <a href="#">Kainat</a>
       </div>
       <!-- <div class="mobile herotext delay1">
-                <a href="#">Sagnik</a>
+                <a href="#">Kainat</a>
             </div> -->
       <nav>
         <ul role="list" class="primary-navigation flex" data-visible="false">
@@ -79,15 +79,6 @@
             <a href="https://theoreticles.netlify.app/" target="_blank" rel="noopener noreferrer me"><span
                 aria-hidden="true" style="font-family:'Roboto',sans-serif;"><i
                   class="uil uil-external-link-alt"></i>/</span>Blog</a>
-          </li>
-          <!-- <li class="navitem delay5">
-                        <a href="./assets/Proposal.pdf" target="_blank" rel="noopener noreferrer me"><span
-                                aria-hidden="true" style="font-family:'Roboto',sans-serif;"><i
-                                    class="uil uil-download-alt"></i></span>Research Statement</a>
-                    </li> -->
-          <li class="navitem delay5">
-            <a href="./assets/Sagnik_CV.pdf" target="_blank" rel="noopener noreferrer me"><span aria-hidden="true"
-                style="font-family:'Roboto',sans-serif;"><i class="uil uil-download-alt"></i></span>CV</a>
           </li>
         </ul>
       </nav>
