--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
           </li>
 
           <li class="navitem delay3">
-            <a href="#talks"><span aria-hidden="true" style="font-family:'Roboto',sans-serif;"><i
-                  class="uil uil-corner-down-right"></i>/</span>talks</a>
+            <a href="#Awards"><span aria-hidden="true" style="font-family:'Roboto',sans-serif;"><i
+                  class="uil uil-corner-down-right"></i>/</span>Awards</a>
           </li>
 
           <!-- <li class="navitem delay4">
