--- a/index.html
+++ b/index.html
@@ -68,17 +68,10 @@
             </a>
           </li> -->
 
-          <li class="navitem delay4">
-            <a href="/misc.html">
-              <span aria-hidden="true" style="font-family:'Roboto',sans-serif;">
-                <i class="uil uil-external-link-alt"></i>/</span>misc.
-            </a>
-          </li>
-
           <li class="navitem delay5">
             <a href="https://theoreticles.netlify.app/" target="_blank" rel="noopener noreferrer me"><span
                 aria-hidden="true" style="font-family:'Roboto',sans-serif;"><i
-                  class="uil uil-external-link-alt"></i>/</span>Blog</a>
+                  class="uil uil-external-link-alt"></i>/</span>Research Papers</a>
           </li>
         </ul>
       </nav>
