--- a/index.html
+++ b/index.html
@@ -77,6 +77,39 @@
       </nav>
     </header>
   </div>
+
+    <main class="mainbody">
+      <!-- <section class="full-page-slide"> -->
+
+      <section>
+
+        <div id="about-me" class="post delay6 about-me flex">
+          <h1 class="titleh1">Sagnik Chatterjee</h1>
+          <div class="about-grid grid">
+            <div class="card__content dp card__img">
+              <img loading="lazy" src="/assets/dp_new.jpeg">
+            </div>
+            <div class="card">
+
+              <div class="card__content">
+                <h2 class="card-title">About Me</h2>
+
+                <p class="card-description">
+                  I am a PhD student in the
+                  <span><a href="https://essrg.iiitd.edu.in/" target="_blank" rel="noopener noreferrer me"> A2A
+                      lab</a></span> at
+                  IIIT-Delhi, where I am very fortunate to be advised by <span><a
+                      href="https://www.iiitd.edu.in/~shobha/" target="_blank" rel="noopener noreferrer me">Dr.
+                      Shobha Sundar Ram</a></span>.
+                </p><br>
+                <h2 class="card-title">My research</h2>
+                <p class="card-description">
+                  My main area of research lies at the intersection of <span class="highlight-bold">radar systems
+                  </span> and <span class="highlight-bold"> deep learning
+                    </span>
+                </p><br>
+
+    
 </body>
     
 </html>
