--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.5/css/unicons.css">
   <link rel="stylesheet" href="css/resources_v2.css">
   <title>Kainat Yasmeen</title>
-  <link rel="icon" href="/assets/cat.png" type="image/x-icon">
+<!--   <link rel="icon" href="/assets/cat.png" type="image/x-icon"> -->
   <!-- <a href="https://www.flaticon.com/free-icons/strawberry" title="strawberry icons">Strawberry icons created by Freepik -
         Flaticon</a> -->
 </head>
@@ -69,7 +69,7 @@
           </li> -->
 
           <li class="navitem delay5">
-            <a href="https://theoreticles.netlify.app/" target="_blank" rel="noopener noreferrer me"><span
+            <a href="https://scholar.google.com/citations?user=HyDPL0wAAAAJ&hl=en&oi=ao/" target="_blank" rel="noopener noreferrer me"><span
                 aria-hidden="true" style="font-family:'Roboto',sans-serif;"><i
                   class="uil uil-external-link-alt"></i>/</span>Research Papers</a>
           </li>
