--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <section>
 
         <div id="about-me" class="post delay6 about-me flex">
-          <h1 class="titleh1">Sagnik Chatterjee</h1>
+          <h1 class="titleh1">Kainat Yasmeen</h1>
           <div class="about-grid grid">
             <div class="card__content dp card__img">
               <img loading="lazy" src="/assets/dp_new.jpeg">
@@ -107,9 +107,6 @@
                   My main area of research lies at the intersection of <span class="highlight-bold">radar systems
                   </span> and <span class="highlight-bold"> deep learning
                     </span>
-                </p><br>
-
-    
-</body>
-    
+                </p><br>   
+</body>   
 </html>
